--- a/APIDocumentation/dpd-documentation-fr.html
+++ b/APIDocumentation/dpd-documentation-fr.html
@@ -234,7 +234,7 @@
                                 </tr>
                                 <tr>
                                     <td><span class="wrap">api/medicament/activeingredient/?ingredientname=</span></td>
-                                    <td>Affiche les ingrédients actifs qui contiennent zinc dans leur nom.</td>
+                                    <td>Affiche les ingrédients actifs selon le texte spécifié dans la requête.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 wrap">
                                             <li><code>ex. zinc</code>&nbsp;- %ZINC% - nom d'ingrédient avec zinc dans leur nom</li>
@@ -565,7 +565,7 @@
                                 </tr>
                                 <tr>
                                     <td><span class="wrap">api/medicament/drugproduct/?brandname=</span></td>
-                                    <td>Affiche les produit pharmaceutiques qui contiennent cidyl dans leur nom commercial.</td>
+                                    <td>Affiche les produit pharmaceutiques selon le texte spécifié dans la requête.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 wrap">
                                             <li><code>ex. cidyl</code>&nbsp;- %CIDYL% - produit pharmaceutique avec cidyl dans le nom commercial </li>
@@ -920,7 +920,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>product_information</strong></td>
-                                    <td>La quantité de produit pharmaceutique dans l'emballage.</td>
+                                    <td>Renseignements supplémentaires sur le produit.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>upc</strong></td>
