lnhpd french translations

--- a/APIDocumentation/lnhpd-documentation-fr.html
+++ b/APIDocumentation/lnhpd-documentation-fr.html
@@ -207,16 +207,16 @@
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong></td>
-                                    <td>[FR]If no ID is provided, a paginated response of all medicinal ingredients is returned beginning at page 1.</td>
+                                    <td>Si le code n’est pas fourni, une réponse paginée de tous les ingrédients médicinaux sera retournée commençant à la page 1. </td>
                                 </tr>
                                 <tr>
                                     <td><span class="nowrap">api/natural-licences/medicinalingredient/?page=</span></td>
-                                    <td>[FR]Returns a given page of the paginated results.</td>
+                                    <td>Retourne un résultat donné des résultats paginés.  </td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 wrap">1-n</ul>
                                     </td>
-                                    <td><strong>[FR]No</strong></td>
-                                    <td>[FR]Parameter can only be used if not searching by ID.</td>
+                                    <td><strong>Non</strong></td>
+                                    <td>Les paramètres peuvent être utilisés que si la recherche par code n’est pas faite.</td>
                                 </tr>
                                 <tr>
                                     <td><span class="nowrap">api/homologations-naturel/medicinalingredient/?lang=fr</span></td>
@@ -1163,16 +1163,16 @@
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong></td>
-                                    <td>[FR]If no ID is provided, a paginated response of all medicinal ingredients is returned beginning at page 1.</td>
+                                    <td>Si le code n’est pas fourni, une réponse paginée de tous les objectifs du produit sera retournée commençant à la page 1.</td>
                                 </tr>
                                 <tr>
                                     <td><span class="nowrap">api/natural-licences/productpurpose/?page=</span></td>
-                                    <td>[FR]Returns a given page of the paginated results.</td>
+                                    <td>Retourne un résultat donné des résultats paginés.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 wrap">1-n</ul>
                                     </td>
-                                    <td><strong>[FR]No</strong></td>
-                                    <td>[FR]Parameter can only be used if not searching by ID.</td>
+                                    <td><strong>Non</strong></td>
+                                    <td>Les paramètres peuvent être utilisés que si la recherche par code n’est pas faite.</td>
                                 </tr>
                                 <tr>
                                     <td><span class="nowrap">api/homologations-naturel/productpurpose/?lang=fr</span></td>
@@ -1330,16 +1330,16 @@
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong></td>
-                                    <td>[FR]If no ID is provided, a paginated response of all medicinal ingredients is returned beginning at page 1.</td>
+                                    <td>Si le code n’est pas fourni, une réponse paginée de tous les risques du produit sera retournée commençant à la page 1.</td>
                                 </tr>
                                 <tr>
                                     <td><span class="nowrap">api/natural-licences/productrisk/?page=</span></td>
-                                    <td>[FR]Returns a given page of the paginated results.</td>
+                                    <td>Retourne un résultat donné des résultats paginés.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 wrap">1-n</ul>
                                     </td>
-                                    <td><strong>[FR]No</strong></td>
-                                    <td>[FR]Parameter can only be used if not searching by ID.</td>
+                                    <td><strong>Non</strong></td>
+                                    <td>Les paramètres peuvent être utilisés que si la recherche par code n’est pas faite.</td>
                                 </tr>
                                 <tr>
                                     <td><span class="nowrap">api/homologations-naturel/productrisk/?lang=fr</span></td>
