add last_update_date description and  sample response for the Drug Product

--- a/APIDocumentation/dpd-documentation-en.html
+++ b/APIDocumentation/dpd-documentation-en.html
@@ -670,11 +670,15 @@
                                     <td><strong>company_name</strong></td>
                                     <td>The company name.</td>
                                 </tr>                               
+								<tr>
+                                    <td><strong>last_update_date</strong></td>
+                                    <td>This date is updated any time certain, but not all, key fields are changed.</td>
+                                </tr>
                             </table>
                         </section>
                         <section>
                              <h3 id="a4.3">Sample response</h3>
-                             <pre class="prettify prettyprint linenums">{"drug_code":2049,"class_name":"Human","drug_identification_number":"00326925","brand_name":"SINEQUAN","descriptor":"","number_of_ais":"1","ai_group_no":"0107703005","company_name":"ASPRI PHARMA CANADA INC"}</pre>
+                             <pre class="prettify prettyprint linenums">{"drug_code":2049,"class_name":"Human","drug_identification_number":"00326925","brand_name":"SINEQUAN","descriptor":"","number_of_ais":"1","ai_group_no":"0107703005","company_name":"ASPRI PHARMA CANADA INC", "last_update_date": "2019-03-05"}</pre>
                         </section>
                         <section>
                              <h3 id="a4.4">jQuery example</h3>
