--- a/APIDocumentation/dpd-documentation-fr.html
+++ b/APIDocumentation/dpd-documentation-fr.html
@@ -666,12 +666,16 @@
                                 <tr>
                                     <td><strong>company_name</strong></td>
                                     <td>Le nom de l'entreprise.</td>
-                                </tr>                               
+                                </tr>
+								<tr>
+                                    <td><strong>last_update_date</strong></td>
+                                    <td>Cette date est mise à jour chaque fois que certains champs clés sont changés, mais pas tous.</td>
+                                </tr>								
                             </table>
                         </section>
                         <section>
                              <h3 id="a4.3">Exemple de résultat</h3>
-                             <pre class="prettify prettyprint linenums">{"drug_code":225,"class_name":"Humain","drug_identification_number":"00000019","brand_name":"PLACIDYL CAP 200MG","descriptor":"","number_of_ais":"1","ai_group_no":"0107593001","company_name":"ABBOTT LABORATORIES, LIMITED"}</pre>
+                             <pre class="prettify prettyprint linenums">{"drug_code":225,"class_name":"Humain","drug_identification_number":"00000019","brand_name":"PLACIDYL CAP 200MG","descriptor":"","number_of_ais":"1","ai_group_no":"0107593001","company_name":"ABBOTT LABORATORIES, LIMITED","last_update_date": "2008-07-23"}</pre>
                         </section>
                         <section>
                              <h3 id="a4.4">Exemple de jQuery</h3>
