update noc documentations

--- a/APIDocumentation/noc-documentation-fr.html
+++ b/APIDocumentation/noc-documentation-fr.html
@@ -57,9 +57,9 @@
     </script>
     <!-- End Google Tag Manager -->
     <div id="def-top">
-        <!-- top-en.html-Start-->
+        <!-- top-fr.html-Start-->
         <link rel="import" href="./StaticFallbackFiles/gcweb/top-fr.html">
-        <!-- top-en.html-End-->
+        <!-- top-fr.html-End-->
     </div>
     <!-- Write closure template -->
     <script type="text/javascript">
@@ -829,9 +829,9 @@
                         <section>
                             <h3 id="a5.3">Exemple de résultat</h3>
                             <pre class="prettify prettyprint linenums">[{"noc_number":3369,"noc_pi_din_product_id":6363,"noc_pi_medic_ingr_name":"NORÉTHINDRONE","noc_pi_strength":1,"noc_pi_unit":"MG","noc_pi_basic_unit":"TAB"},
-    {"noc_number":3369,"noc_pi_din_product_id":6363,"noc_pi_medic_ingr_name":"MESTRANOL","noc_pi_strength":0,"noc_pi_unit":"MG","noc_pi_basic_unit":"TAB"},
+    {"noc_number":3369,"noc_pi_din_product_id":6363,"noc_pi_medic_ingr_name":"MESTRANOL","noc_pi_strength":0.05,"noc_pi_unit":"MG","noc_pi_basic_unit":"TAB"},
     {"noc_number":3369,"noc_pi_din_product_id":6364,"noc_pi_medic_ingr_name":"NORÉTHINDRONE","noc_pi_strength":1,"noc_pi_unit":"MG","noc_pi_basic_unit":"TAB"},
-    {"noc_number":3369,"noc_pi_din_product_id":6364,"noc_pi_medic_ingr_name":"MESTRANOL","noc_pi_strength":0,"noc_pi_unit":"MG","noc_pi_basic_unit":"TAB"}]</pre>
+    {"noc_number":3369,"noc_pi_din_product_id":6364,"noc_pi_medic_ingr_name":"MESTRANOL","noc_pi_strength":0.05,"noc_pi_unit":"MG","noc_pi_basic_unit":"TAB"}]</pre>
                         </section>
                         <section>
                             <h3 id="a5.4">Exemple de jQuery</h3>
@@ -1114,17 +1114,17 @@
                     </section><!--Veterinary Species -section -end-->
                 </section><!--Entire Doc Section end-->
             </div>
-            <!-- prefooter-en.html-Start-->
+            <!-- prefooter-fr.html-Start-->
             <div id="def-preFooter">
                 <link rel="import" href="./StaticFallbackFiles/gcweb/prefooter-fr.html">
             </div>
-            <!-- prefooter-en.html-End-->
+            <!-- prefooter-fr.html-End-->
             <!-- Write closure template -->
             <script type="text/javascript">
                 var defPreFooter = document.getElementById("def-preFooter");
                 defPreFooter.outerHTML = wet.builder.preFooter({
                     cdnEnv: "prod",
-                    dateModified: "2017-06-27",
+                    dateModified: "2020-05-19",
                     showPostContent: true,
                     showShare: true,
                 });
@@ -1132,11 +1132,11 @@
         </main>
     </div>
 
-    <!-- footer-en.html-Start-->
+    <!-- footer-fr.html-Start-->
     <div id="def-footer">
         <link rel="import" href="./StaticFallbackFiles/gcweb/footer-fr.html">
     </div>
-    <!-- footer-en.html-End-->
+    <!-- footer-fr.html-End-->
     <!-- Write closure template -->
     <script type="text/javascript">
             var defFooter = document.getElementById("def-footer");
