--- a/APIDocumentation/dpd-documentation-en.html
+++ b/APIDocumentation/dpd-documentation-en.html
@@ -1595,14 +1595,6 @@
                                     <td>The code assigned to each drug product.</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>tc_ahfs</strong></td>
-                                    <td>The description of the American Hospital Formulary Service.</td>
-                                </tr>
-                                <tr>
-                                    <td><strong>tc_ahfs_number</strong></td>
-                                    <td>The American Hospital Formulary Service code.</td>
-                                </tr>
-                                <tr>
                                     <td><strong>tc_atc</strong></td>
                                     <td>The description of the Anatomical Therapeutic Chemical Code.</td>
                                 </tr>
@@ -1615,7 +1607,7 @@
                         </section>
                         <section>
                              <h3 id="a11.3">Sample response</h3>
-                             <pre class="prettify prettyprint linenums">{"drug_code":10564,"tc_atc_number":"V07AV","tc_atc":"TECHNICAL DISINFECTANTS","tc_ahfs_number":"38:00.00","tc_ahfs":"DISINFECTANTS (FOR AGENTS USED ON OBJECT)"}</pre>
+                             <pre class="prettify prettyprint linenums">{"drug_code":10564,"tc_atc_number":"V07AV","tc_atc":"TECHNICAL DISINFECTANTS"}</pre>
                         </section>
                         <section>
                              <h3 id="a11.4">jQuery example</h3>
