update the AHFS code and description from the Therapeutic endpoint for the DPD API documentations
in align with https://github.com/hres/api-dpd/commit/ff733055d117db2b334b61cb8caee853ae30a5e1

--- a/APIDocumentation/dpd-documentation-en.html
+++ b/APIDocumentation/dpd-documentation-en.html
@@ -1594,6 +1594,14 @@
                                     <td><strong>drug_code</strong></td>
                                     <td>The code assigned to each drug product.</td>
                                 </tr>
+								<tr>
+                                    <td><strong>tc_ahfs</strong></td>
+                                    <td>The description of the American Hospital Formulary Service is no longer available.</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>tc_ahfs_number</strong></td>
+                                    <td>The American Hospital Formulary Service code is no longer available.</td>
+                                </tr>
                                 <tr>
                                     <td><strong>tc_atc</strong></td>
                                     <td>The description of the Anatomical Therapeutic Chemical Code.</td>
@@ -1607,7 +1615,7 @@
                         </section>
                         <section>
                              <h3 id="a11.3">Sample response</h3>
-                             <pre class="prettify prettyprint linenums">{"drug_code":10564,"tc_atc_number":"V07AV","tc_atc":"TECHNICAL DISINFECTANTS"}</pre>
+                             <pre class="prettify prettyprint linenums">{"drug_code":10564,"tc_atc_number":"V07AV","tc_atc":"TECHNICAL DISINFECTANTS","tc_ahfs_number":"","tc_ahfs":""}</pr
                         </section>
                         <section>
                              <h3 id="a11.4">jQuery example</h3>
