update the AHFS code and description from the Therapeutic endpoint for the DPD API documentations
in align with https://github.com/hres/api-dpd/commit/ff733055d117db2b334b61cb8caee853ae30a5e1

--- a/APIDocumentation/dpd-documentation-fr.html
+++ b/APIDocumentation/dpd-documentation-fr.html
@@ -1587,6 +1587,14 @@
                                     <td><strong>drug_code</strong></td>
                                     <td>Le code attribué à chaque produit pharmaceutique.</td>
                                 </tr>
+								<tr>
+                                    <td><strong>tc_ahfs</strong></td>
+                                    <td>La description du code American Hospital Formulary Service n'est plus disponible.</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>tc_ahfs_number</strong></td>
+                                    <td>Le code American Hospital Formulary Service n'est plus disponible.</td>
+                                </tr>
                                 <tr>
                                     <td><strong>tc_atc</strong></td>
                                     <td>La description du code anatomique, thérapeutique, chimique.</td>
@@ -1599,7 +1607,7 @@
                         </section>                            
                        <section>
                             <h3 id="a11.3">Exemple de résultat</h3>
-                            <pre class="prettify prettyprint linenums">{"drug_code":10564,"tc_atc_number":"V07AV","tc_atc":"TECHNICAL DISINFECTANTS"}</pre>
+                            <pre class="prettify prettyprint linenums">{"drug_code":10564,"tc_atc_number":"V07AV","tc_atc":"TECHNICAL DISINFECTANTS","tc_ahfs_number":"","tc_ahfs":""}</pre>
                        </section>
                        <section>
                             <h3 id="a11.4">Exemple de jQuery</h3>
