--- a/APIDocumentation/dpd-documentation-en.html
+++ b/APIDocumentation/dpd-documentation-en.html
@@ -23,10 +23,10 @@
     <meta name="meta_date" content="" />
  
     <!-- Load closure template scripts -->
-    <script type="text/javascript" src="https://ssl-templates.services.gc.ca/app/cls/wet/gcweb/v4_0_21/js/compiled/soyutils.js"></script>
-    <script type="text/javascript" src="https://ssl-templates.services.gc.ca/app/cls/wet/gcweb/v4_0_21/js/compiled/wet-en.js"></script>
-    <script type="text/javascript" src="https://ssl-templates.services.gc.ca/app/cls/wet/gcweb/v4_0_21/js/compiled/plugins-en.js"></script>
-
+    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_28/cdts/compiled/soyutils.js"></script>
+    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_28/cdts/compiled/wet-en.js"></script>
+    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_28/cdts/compiled/plugins-en.js"></script>
+    
     <!-- Load closure template scripts -->
     <noscript>
         <link rel="import" href="./StaticFallbackFiles/gcweb/refTop.html">
