--- a/APIDocumentation/mdel-dataset-en.html
+++ b/APIDocumentation/mdel-dataset-en.html
@@ -240,7 +240,7 @@
                     <div class="row"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <h1>Medical Devices Active Licence Listing (MDALL)</h1>
+                            <h1>Medical Devices Establishment Listing (MDEL)</h1>
                         </div>
                     </div>
                     <div class="row">
