Removed base URI hyperlinks - bolded instead

--- a/APIDocumentation/cvp-documentation-fr.html
+++ b/APIDocumentation/cvp-documentation-fr.html
@@ -195,7 +195,7 @@
                         <h2 id="a1">Introduction</h2>
                         <p>La base de données en ligne des effets indésirables de Canada Vigilance renferme de l'information au sujet des effets indésirables soupçonnés (ou effets secondaires) associés à des produits de santé.</p>
                         <p>Cette interface de programmation d'applications (API) permet aux concepteurs d'accéder à ces renseignements en format JSON et XML afin de les utiliser dans leurs propres applications.
-                        L'adresse URI de base sur la Base de données en ligne des effets indésirables de Canada Vigilance (BDEI) est&nbsp;<a href="https://produits-sante.canada.ca/api/canada-vigilance/">https://produits-sante.canada.ca/api/canada-vigilance/</a> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>                        
+                        L'adresse URI de base sur la Base de données en ligne des effets indésirables de Canada Vigilance (BDEI) est&nbsp;<strong>https://produits-sante.canada.ca/api/canada-vigilance/</strong>&nbsp;et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>                        
                     </section>
                     <section>
                         <!--Drug Product Ingredient - section-start-->
