--- a/APIDocumentation/lnhpd-documentation-fr.html
+++ b/APIDocumentation/lnhpd-documentation-fr.html
@@ -179,7 +179,7 @@
                         <h2 id="a1">Introduction</h2>
                         <p>La Base de données des produits de santé naturels homologués (BDPSNH) contient des renseignements sur les produits de santé naturels (PSN) ayant reçu une licence de mise en marché de Santé Canada.</p>
                         <p>Cette interface de programmation d'applications (API) permet aux concepteurs d'accéder à ces renseignements en format JSON et XML afin de les utiliser dans leurs propres applications.
-                        L'adresse URI de base sur la Base de donnée de produits de santé naturels homologués (BDPSNH) est&nbsp;<a href="https://produits-sante.canada.ca/api/homologations-naturel/">https://produits-sante.canada.ca/api/homologations-naturel/</a> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>
+                        L'adresse URI de base sur la Base de donnée de produits de santé naturels homologués (BDPSNH) est&nbsp;<strong>https://produits-sante.canada.ca/api/homologations-naturel/</strong>&nbsp;et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>
                     </section>
                     <!-- Intoduction end -->
                     <!-- INGREDIENT start -->
