--- a/APIDocumentation/noc-documentation-en.html
+++ b/APIDocumentation/noc-documentation-en.html
@@ -164,7 +164,7 @@
                         <p>The database is updated nightly and contains NOC information on human drugs from January 1, 1994 to date. It also contains NOC information on Veterinary drugs from September 19, 2000 to date. 
                         Through a phased in approach Health Canada will populate the remaining NOCs for Veterinary drugs from January 1, 1994 to September 18, 2000.</p>
                         <p>This Application Programming Interface (API) allows developers to access that information in JSON and XML format for reuse in their own applications.
-                        The base URI for the Notice of Compliance Database is&nbsp;<a href="https://health-products.canada.ca/api/notice-of-compliance/">https://health-products.canada.ca/api/notice-of-compliance/</a> and you can add parameters to it. Any requests are made relative to this URI.</p>                        
+                        The base URI for the Notice of Compliance Database is&nbsp;<strong>https://health-products.canada.ca/api/notice-of-compliance/</strong>&nbsp;and you can add parameters to it. Any requests are made relative to this URI.</p>                        
                     </section>
                     <!--Drug Product-section-start-->  
                     <section>                        
