--- a/APIDocumentation/noc-documentation-fr.html
+++ b/APIDocumentation/noc-documentation-fr.html
@@ -162,7 +162,7 @@
                         <p>La base de données est mise à jour tous les soirs et elle comprend des renseignements sur les AC concernant les médicaments pour usage humain émis depuis le 1er janvier 1994 jusqu'à ce jour. 
                         Elle comprend également les renseignements sur les AC concernant les médicaments vétérinaires émis depuis le 19 septembre 2000 jusqu'à ce jour. Santé Canada ajoutera progressivement les AC concernant les médicaments vétérinaires émis entre le 1er janvier 1994 et le 18 septembre 2000.</p>
                         <p>Cette interface de programmation d'applications (API) permet aux concepteurs d'accéder à ces renseignements en format JSON et XML afin de les utiliser dans leurs propres applications.
-                        L'adresse URI de base sur les avis de conformité est&nbsp;<a href="https://produits-sante.canada.ca/api/avis-de-conformite/">https://produits-sante.canada.ca/api/avis-de-conformite/</a> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>                        
+                        L'adresse URI de base sur les avis de conformité est&nbsp;<strong>https://produits-sante.canada.ca/api/avis-de-conformite/</strong>&nbsp;et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>                        
                     </section> 
                     <!--Drug product-section-start-->                  
                     <section>                        
