--- a/APIDocumentation/mdall-documentation-en.html
+++ b/APIDocumentation/mdall-documentation-en.html
@@ -156,7 +156,7 @@
                         <p>The Bureau maintains a database of all licensed Class II, III, and IV medical devices offered for sale in Canada. Class I medical devices do not require a medical device licence and are monitored by the Regulatory Operations and Regions Branch (Compliance and Enforcement) through Establishment Licensing.</p>
                         <p>Only products which appear in this database listing may be offered for general marketing purposes in Canada. Class I Devices, or devices which relate to Investigational Testing Authorization or Special Access do not appear in this listing.</p>
                         <p>This Application Programming Interface (API) allows developers to access that information in JSON and XML format for reuse in their own applications.
-                        The base URI for the Medical Devices Active Licence Listing is&nbsp;<a href="https://health-products.canada.ca/api/medical-devices/">https://health-products.canada.ca/api/medical-devices/</a> and you can add parameters to it. Any requests are made relative to this URI.</p>                        
+                        The base URI for the Medical Devices Active Licence Listing is&nbsp;<strong>https://health-products.canada.ca/api/medical-devices/</strong>&nbsp;and you can add parameters to it. Any requests are made relative to this URI.</p>                        
                     </section>
                     <section>
                         <!--Licence-section-start-->
