--- a/APIDocumentation/mdall-documentation-fr.html
+++ b/APIDocumentation/mdall-documentation-fr.html
@@ -152,7 +152,7 @@
                         <p>Le Bureau maintient une base de données sur tous les instruments médicaux de classe II, III ou IV vendus au Canada. Les instruments médicaux de classe I ne requiert pas une homologation des intruments médicaux. Ils sont réglementés par la Direction générale des opérations réglementaires et des régions (Conformité et application de la loi) au moyen des licences d'établissement.</p>
                         <p>Seuls les produits figurant sur cette liste électronique peuvent être offerts pour la vente au Canada. Les instruments médicaux de classe 1 ou vendus aux fins d'essais expérimentaux et aux fins d'un accès spécial ne sont pas inclus.</p>
                         <p>Cette interface de programmation d'applications (API) permet aux concepteurs d'accéder à ces renseignements en format JSON et XML afin de les utiliser dans leurs propres applications.
-                         L'adresse URI de base sur la Liste des instruments médicaux homologués en vigueur est &nbsp;<a href="https//produits-sante.canada.ca/api/instruments-medicaux/">https://produits-sante.canada.ca/api/instruments-medicaux/</a> et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>             
+                         L'adresse URI de base sur la Liste des instruments médicaux homologués en vigueur est&nbsp;<strong>https://produits-sante.canada.ca/api/instruments-medicaux/</strong>&nbsp;et vous pouvez y ajouter des paramètres. Toute requête est effectuée par l'entremise de cette adresse URI.</p>             
                     </section>
                     <section>
                         <!--Licence-section-start-->
